test/arrays/diten/arrayFrontOOB.good
arrayFrontOOB.chpl:3: error: halt reached - front called on an empty array
