test/arrays/diten/arrayFrontOOB.chpl
var A: [1..0] int;

writeln(A.front());
